Fix slider(auto slide after 4 sec), form(background, required), menu(wrap)

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,8 +11,7 @@
 }
 
 .header-container, .menu-container, .content-container, .footer-container, .breadcrumbs {
-  box-sizing: border-box;
-  width: 1000px;
+  width: 980px;
   padding: 0 10px;
   margin: auto;
 }
@@ -52,13 +51,16 @@ body {
 .header-content {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
 
+  .header-item {
+    align-self: flex-end;
+  }
   img {
     margin-right: auto;
   }
 
   .contacts {
+    margin-left: auto;
     text-align: right;
 
     p {
@@ -75,8 +77,6 @@ body {
       text-decoration: underline;
       text-decoration-style: dashed;
     }
-
-    //align-self: center;
   }
 }
 
@@ -93,6 +93,7 @@ body {
 }
 
 .menu-content {
+  min-width: 980px;
   display: flex;
   justify-content: space-between;
   font-size: 28px;
@@ -102,6 +103,7 @@ body {
     margin: 0 auto;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     list-style-type: none;
 
     li {
@@ -109,8 +111,12 @@ body {
       padding: 0 20px;
     }
 
-    li:not(:first-child) {
-      border-left: 2px solid #fff;
+    li:not(:last-child) {
+      border-right: 2px solid #fff;
+    }
+
+    li:not(:nth-child(-n+5)) {
+      padding-top: 5px;
     }
 
     a {
@@ -289,6 +295,7 @@ body {
       .content-item {
         display: flex;
         flex-direction: column;
+        align-self: flex-start;
         width: 250px;
         height: 380px;
         box-sizing: border-box;
@@ -369,6 +376,8 @@ body {
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
+      flex-wrap: wrap;
+      max-width: 750px;
 
       .bottom-left {
         margin-right: auto;
@@ -402,6 +411,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  justify-content: flex-end;
   color: #FFFFFF;
 
   .footer-left {
@@ -409,6 +419,10 @@ body {
   }
 
   .footer-middle {
+    padding-right: 280px;
+    padding-left: 150px;
+    margin-right: auto;
+    margin-left: auto;
     ul {
       list-style-type: none;
 
@@ -421,7 +435,6 @@ body {
   .footer-right {
     display: flex;
     flex-direction: row;
-    margin-left: auto;
 
     p {
       padding: 0;
@@ -439,16 +452,21 @@ body {
 
 //CONTACT FORM
 #form {
-  z-index: 99;
+  position: fixed;
+  //z-index: 99;
   display: none;
   height: 100%;
   width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .form-container {
+  width: 100%;
+  height: 100%;
   position: absolute;
-  top: 25%;
+  top: 15%;
   left: 40%;
+
 
   .form-container-content {
     width: 494px;
@@ -492,6 +510,22 @@ body {
         flex-direction: column;
         align-items: center;
 
+        input[type=submit] {
+          display: block;
+          margin: 0 auto;
+          color: #FFFFFF;
+          border: none;
+          text-align: center;
+          height: 42px;
+          width: 128px;
+          background-color: #777777;
+          text-decoration: none;
+          padding: 10px;
+          font-size: 18px;
+          text-transform: uppercase;
+          letter-spacing: -1px;
+        }
+
         .field {
           display: flex;
           flex-direction: column;
@@ -503,22 +537,25 @@ body {
             width: 339px;
             height: 40px;
           }
+
+          input:not(:valid) {
+            border: 2px solid rgba(255, 2, 0, 1);
+            box-shadow: 0 0 15px rgba(255, 2, 0, 0.5) inset;
+          }
+
+          textarea {
+            overflow: hidden;
+            padding: 5px;
+            resize: none;
+          }
         }
       }
 
       a {
-        color: #FFFFFF;
-        text-align: center;
-        height: 42px;
-        width: 128px;
-        background-color: #777777;
-        text-decoration: none;
+
 
         p {
-          padding: 10px;
-          font-size: 18px;
-          text-transform: uppercase;
-          letter-spacing: -1px;
+
         }
       }
     }
@@ -526,3 +563,9 @@ body {
 }
 
 //--------------------------------
+
+@media screen and (max-width: 1000px) {
+  #slider {
+    display: none;
+  }
+}
